examples/team2/schemas/payments.service.yml
apiVersion: v1
kind: Service
metadata:
  name: payments
  namespace: team2
spec:
  selector:
    role: payments
  type: ClusterIP
  ports:
  - name: endpoint
    port: 50051
    targetPort: grpc
